<resources>
    <string name="app_name">TTSOnline</string>
    <string name="app_title">火山引擎语音合成</string>
    <string name="input_app_id">语音合成服务App ID</string>
    <string name="input_token">语音合成服务Token</string>
    <string name="select_voice_scene">场景:</string>
    <string name="select_voice_item">声音:</string>
    <string name="input_text_for_speak">待合成文本</string>
    <string name="button_speak">朗读</string>
    <string name="save_settings">保存设置</string>
    
    <!-- TTS引擎相关字符串 -->
    <string name="tts_engine_name">TTSOnline</string>
    <string name="tts_engine_label">火山引擎语音合成</string>
</resources>